##
## $Id$
##

include $(top_srcdir)/mircommon.mak

##ANALYSIS_LD_ADD = ../../subs/libmir_uvio.la ../../subs/libmir.la
##ANALYSIS_LD_FLAGS = 
AM_CFLAGS = @x_cflags@
LDADD = $(prog_libs)

bin_PROGRAMS = avmaths boxspec boxtest clfind clplot \
  clstats colden contsub convol demos \
  deproject ellint ellplt fft gaufit \
  hanning hatfft hermes histo imbin \
  imblob imblr imcat imcfn imcmp imcomb \
  imcorr imdiff imfit imframe imgen \
  imhead imheq imhist imhol imlist \
  imload immask immedian immerge imom \
  implot impol impoly impos imrm \
  imsad imsharp imspec imspect imstat \
  imstore imsub imtab imwcs imwrite \
  linmos maths maxfit mfspin minmax \
  moment mossen odnh3 pbplot pcsub polargrid \
  pops posvel potfft psrfix psrplt \
  regrid reorder rotcurmask shifty sigest \
  smooth vblank velcolor velfit velimage \
  velmodel velplot velsw xpeak zapchan \
  zeeeta zeefake zeemap zeesim zeestat


BUILT_SOURCES = avmaths.f boxspec.f boxtest.f clfind.f clplot.f \
  clstats.f colden.f contsub.f convol.f demos.f \
  deproject.f ellint.f ellplt.f fft.f gaufit.f \
  hanning.f hatfft.f hermes.f histo.f imbin.f \
  imblob.f imblr.f imcat.f imcfn.f imcmp.f imcomb.f \
  imcorr.f imdiff.f imfit.f imframe.f imgen.f \
  imhead.f imheq.f imhist.f imhol.f imlist.f \
  imload.f immask.f immedian.f immerge.f imom.f \
  implot.f impol.f impoly.f impos.f imrm.f \
  imsad.f imsharp.f imspec.f imspect.f imstat.f \
  imstore.f imsub.f imtab.f imwcs.f imwrite.f \
  linmos.f maths.f maxfit.f mfspin.f minmax.f \
  moment.f mossen.f odnh3.f pbplot.f pcsub.f polargrid.f \
  pops.f posvel.f potfft.f psrfix.f psrplt.f \
  regrid.f reorder.f rotcurmask.f shifty.f sigest.f \
  smooth.f vblank.f velcolor.f velfit.f velimage.f \
  velmodel.f velplot.f velsw.f xpeak.f zapchan.f \
  zeeeta.f zeefake.f zeemap.f zeesim.f zeestat.f

noinst_HEADERS = clfind.h clpars.h clplot.h clstats.h hermes.h \
  imblob.h imdiff.h imfit.h imhist.h imsad.h imsad2.h imspec.h \
  imstat.h maths.h mfspin.h psrfix.h regrid.h velplot.h 

EXTRA_DIST = avmaths.for boxspec.for boxtest.for clfind.for clplot.for \
  clstats.for colden.for contsub.for convol.for demos.for \
  deproject.for ellint.for ellplt.for fft.for gaufit.for \
  hanning.for hatfft.for hermes.for histo.for imbin.for \
  imblob.for imblr.for imcat.for imcfn.for imcmp.for imcomb.for \
  imcorr.for imdiff.for imfit.for imframe.for imgen.for \
  imhead.for imheq.for imhist.for imhol.for imlist.for \
  imload.for immask.for immedian.for immerge.for imom.for \
  implot.for impol.for impoly.for impos.for imrm.for \
  imsad.for imsharp.for imspec.for imspect.for imstat.for \
  imstore.for imsub.for imtab.for imwcs.for imwrite.for \
  linmos.for maths.for maxfit.for mfspin.for minmax.for \
  moment.for mossen.for odnh3.for pbplot.for pcsub.for polargrid.for \
  pops.for posvel.for potfft.for psrfix.for psrplt.for \
  regrid.for reorder.for rotcurmask.for shifty.for sigest.for \
  smooth.for vblank.for velcolor.for velfit.for velimage.for \
  velmodel.for velplot.for velsw.for xpeak.for zapchan.for \
  zeeeta.for zeefake.for zeemap.for zeesim.for zeestat.for


nodist_avmaths_SOURCES = avmaths.f
nodist_boxspec_SOURCES = boxspec.f
nodist_boxtest_SOURCES = boxtest.f
nodist_clfind_SOURCES = clfind.f
nodist_clplot_SOURCES = clplot.f
nodist_clstats_SOURCES = clstats.f
nodist_colden_SOURCES = colden.f
nodist_contsub_SOURCES = contsub.f
nodist_convol_SOURCES = convol.f
nodist_demos_SOURCES = demos.f
nodist_deproject_SOURCES = deproject.f
nodist_ellint_SOURCES = ellint.f
nodist_ellplt_SOURCES = ellplt.f
nodist_fft_SOURCES = fft.f
nodist_gaufit_SOURCES = gaufit.f
nodist_hanning_SOURCES = hanning.f
nodist_hatfft_SOURCES = hatfft.f
nodist_hermes_SOURCES = hermes.f
nodist_histo_SOURCES = histo.f
nodist_imbin_SOURCES = imbin.f
nodist_imblob_SOURCES = imblob.f
nodist_imblr_SOURCES = imblr.f
nodist_imcat_SOURCES = imcat.f
nodist_imcfn_SOURCES = imcfn.f
nodist_imcmp_SOURCES = imcmp.f
nodist_imcomb_SOURCES = imcomb.f
nodist_imcorr_SOURCES = imcorr.f
nodist_imdiff_SOURCES = imdiff.f
nodist_imfit_SOURCES = imfit.f
nodist_imframe_SOURCES = imframe.f
nodist_imgen_SOURCES = imgen.f
nodist_imhead_SOURCES = imhead.f
nodist_imheq_SOURCES = imheq.f
nodist_imhist_SOURCES = imhist.f
nodist_imhol_SOURCES = imhol.f
nodist_imlist_SOURCES = imlist.f
nodist_imload_SOURCES = imload.f
nodist_immask_SOURCES = immask.f
nodist_immedian_SOURCES = immedian.f
nodist_immerge_SOURCES = immerge.f
nodist_imom_SOURCES = imom.f
nodist_implot_SOURCES = implot.f
nodist_impol_SOURCES = impol.f
nodist_impoly_SOURCES = impoly.f
nodist_impos_SOURCES = impos.f
nodist_imrm_SOURCES = imrm.f
nodist_imsad_SOURCES = imsad.f
nodist_imsharp_SOURCES = imsharp.f
nodist_imspec_SOURCES = imspec.f
nodist_imspect_SOURCES = imspect.f
nodist_imstat_SOURCES = imstat.f
nodist_imstore_SOURCES = imstore.f
nodist_imsub_SOURCES = imsub.f
nodist_imtab_SOURCES = imtab.f
nodist_imwcs_SOURCES = imwcs.f
nodist_imwrite_SOURCES = imwrite.f
nodist_linmos_SOURCES = linmos.f
nodist_maths_SOURCES = maths.f
nodist_maxfit_SOURCES = maxfit.f
nodist_mfspin_SOURCES = mfspin.f
nodist_minmax_SOURCES = minmax.f
nodist_moment_SOURCES = moment.f
nodist_mossen_SOURCES = mossen.f
nodist_odnh3_SOURCES = odnh3.f
nodist_pbplot_SOURCES = pbplot.f
nodist_pcsub_SOURCES = pcsub.f
nodist_polargrid_SOURCES = polargrid.f
nodist_pops_SOURCES = pops.f
nodist_posvel_SOURCES = posvel.f
nodist_potfft_SOURCES = potfft.f
nodist_psrfix_SOURCES = psrfix.f
nodist_psrplt_SOURCES = psrplt.f
nodist_regrid_SOURCES = regrid.f
nodist_reorder_SOURCES = reorder.f
nodist_rotcurmask_SOURCES = rotcurmask.f
nodist_shifty_SOURCES = shifty.f
nodist_sigest_SOURCES = sigest.f
nodist_smooth_SOURCES = smooth.f
nodist_vblank_SOURCES = vblank.f
nodist_velcolor_SOURCES = velcolor.f
nodist_velfit_SOURCES = velfit.f
nodist_velimage_SOURCES = velimage.f
nodist_velmodel_SOURCES = velmodel.f
nodist_velplot_SOURCES = velplot.f
nodist_velsw_SOURCES = velsw.f
nodist_xpeak_SOURCES = xpeak.f
nodist_zapchan_SOURCES = zapchan.f
nodist_zeeeta_SOURCES = zeeeta.f
nodist_zeefake_SOURCES = zeefake.f
nodist_zeemap_SOURCES = zeemap.f
nodist_zeesim_SOURCES = zeesim.f
nodist_zeestat_SOURCES = zeestat.f

